Add function management user

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Student Affairs | Trang Chủ";
-    Layout = "~/Views/Shared/_StudentAffairsLayout.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <script src="~/ActiveItemMenu/admin/admindashboard/index.js"></script>
