--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -39,7 +39,7 @@
     <link rel="canonical" href="https://trogiangvlu.website">
     <script src="~/Content/assets/js/vendors/jquery.min.js"></script>
 
-    <title>@ViewBag.Title</title>
+    <title>Department | @ViewBag.Title</title>
 </head>
 
 <body>
@@ -66,38 +66,52 @@
                     </li>
 
                     <li class="nav-item">
-                        <a id="child-user-index" class="nav-link child-nav-link " href="@Url.Action("index", "Users")">
-                            <i class="nav-icon fe fe-users me-2"></i>
-                            Người dùng
+                        <a id="parent-trogiang" class="nav-link  " href="#"
+                           data-bs-toggle="collapse" data-bs-target="#nav-trogiang" aria-expanded="false"
+                           aria-controls="nav-trogiang">
+                            <i class="nav-icon fe fe-briefcase me-2"></i> Trợ giảng
                         </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a id="parent-studentaffairs-studentaffairssemesterandmajor" class="nav-link  " href="#"
-                           data-bs-toggle="collapse" data-bs-target="#nav-studentaffairs-studentaffairssemesterandmajor" aria-expanded="false"
-                           aria-controls="nav-studentaffairs-studentaffairssemesterandmajor">
-                            <i class="nav-icon fe fe-layers me-2"></i> Học kỳ & Ngành
-                        </a>
-                        <div id="nav-studentaffairs-studentaffairssemesterandmajor" class="collapse "
+                        <div id="nav-trogiang" class="collapse "
                              data-bs-parent="#sideNavbar">
                             <ul class="nav flex-column">
                                 <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairssemesterandmajor-hocky" class="child-nav-link nav-link "
-                                       href="@Url.Action("semester", "TermAndMajor")">
-                                        Học kỳ
+                                    <a id="child-trogiang-register" class="child-nav-link nav-link "
+                                       href="@Url.Action("Register", "TeachingAssistant")">
+                                        Form đăng ký
                                     </a>
                                 </li>
-                                <!-- Nav item -->
                                 <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairssemesterandmajor-nganh" class="child-nav-link nav-link "
-                                       href="@Url.Action("major", "TermAndMajor")">
-                                        Ngành
+                                    <a id="child-trogiang-info" class="child-nav-link nav-link "
+                                       href="@Url.Action("Register", "TeachingAssistant")">
+                                        Thông tin trợ giảng
                                     </a>
                                 </li>
+
                             </ul>
                         </div>
                     </li>
 
+                    <li class="nav-item">
+                        <a id="child-task-index" class="nav-link child-nav-link " href="@Url.Action("index", "TaskList")">
+                            <span>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                     width="18"
+                                     height="18"
+                                     viewBox="0 0 24 24"
+                                     fill="none"
+                                     stroke="currentColor"
+                                     stroke-width="2"
+                                     stroke-linecap="round"
+                                     stroke-linejoin="round"
+                                     class="feather feather-trello">
+                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                    <rect x="7" y="7" width="3" height="9"></rect>
+                                    <rect x="14" y="7" width="3" height="5"></rect>
+                                </svg>
+                            </span>
+                            <span class="ms-2">Nhiệm vụ</span>
+                        </a>
+                    </li>
 
                     <li class="nav-item">
                         <a id="parent-studentaffairs-studentaffairstimetable" class="nav-link  " href="#"
@@ -127,30 +141,35 @@
                     </li>
 
                     <li class="nav-item">
-                        <a id="parent-trogiang" class="nav-link  " href="#"
-                           data-bs-toggle="collapse" data-bs-target="#nav-trogiang" aria-expanded="false"
-                           aria-controls="nav-trogiang">
-                            <i class="nav-icon fe fe-calendar me-2"></i> Trợ giảng
+                        <a id="parent-studentaffairs-studentaffairssemesterandmajor" class="nav-link  " href="#"
+                           data-bs-toggle="collapse" data-bs-target="#nav-studentaffairs-studentaffairssemesterandmajor" aria-expanded="false"
+                           aria-controls="nav-studentaffairs-studentaffairssemesterandmajor">
+                            <i class="nav-icon fe fe-layers me-2"></i> Học kỳ & Ngành
                         </a>
-                        <div id="nav-trogiang" class="collapse "
+                        <div id="nav-studentaffairs-studentaffairssemesterandmajor" class="collapse "
                              data-bs-parent="#sideNavbar">
                             <ul class="nav flex-column">
                                 <li class="nav-item ">
-                                    <a id="child-trogiang-index" class="child-nav-link nav-link "
-                                       href="@Url.Action("Register", "TeachingAssistant")">
-                                        Form đăng ký
+                                    <a id="child-studentaffairs-studentaffairssemesterandmajor-hocky" class="child-nav-link nav-link "
+                                       href="@Url.Action("semester", "TermAndMajor")">
+                                        Học kỳ
                                     </a>
                                 </li>
                                 <!-- Nav item -->
                                 <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairstimetable-import" class="child-nav-link nav-link "
-                                       href="@Url.Action("import", "TimeTable")">
-                                        Import TKB
-
+                                    <a id="child-studentaffairs-studentaffairssemesterandmajor-nganh" class="child-nav-link nav-link "
+                                       href="@Url.Action("major", "TermAndMajor")">
+                                        Ngành
                                     </a>
                                 </li>
                             </ul>
                         </div>
+                    </li>
+                    <li class="nav-item">
+                        <a id="child-user-index" class="nav-link child-nav-link " href="@Url.Action("index", "Users")">
+                            <i class="nav-icon fe fe-users me-2"></i>
+                            Người dùng
+                        </a>
                     </li>
                 </ul>
 
@@ -248,7 +267,8 @@
 
     <script src="~/Content/assets/libs/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
     <script src="~/Content/assets/libs/dropzone/dist/min/dropzone.min.js"></script>
-    <script src="~/Content/assets/libs/flatpickr/dist/flatpickr.min.js"></script>
+    @*<script src="~/Content/assets/libs/flatpickr/dist/flatpickr.min.js"></script>*@
+    <script src="~/Content/assets/libs/flatpickr/dist/flatpickr.js"></script>
     <script src="~/Content/assets/js/vendors/flatpickr.js"></script>
 
     <script src="~/Content/assets/libs/Sweetalert2/js/sweetalert2.all.min.js"></script>
