--- a/Views/TimeTable/Import.cshtml
+++ b/Views/TimeTable/Import.cshtml
@@ -1,12 +1,12 @@
 ﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models
 @{
-    TrogiangvluEntities models = new TrogiangvluEntities();
+    CongTacTroGiangKhoaCNTTEntities models = new CongTacTroGiangKhoaCNTTEntities();
 
     var lstHk = models.HocKy.ToList();
     var lstNganh = models.Nganh.ToList();
 
     ViewBag.Title = "Student Affairs | Import Thời Khóa Biểu";
-    Layout = "~/Views/Shared/_StudentAffairsLayout.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <style>
@@ -169,7 +169,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
-                                <a href="@Url.Action("index", "studentaffairsdashboard")">Dashboard</a>
+                                <a href="@Url.Action("index", "dashboard")">Dashboard</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">
                                 Thời Khóa Biểu
