--- a/Views/Shared/_TeacherLayout.cshtml
+++ b/Views/Shared/_TeacherLayout.cshtml
@@ -39,7 +39,7 @@
     <link rel="canonical" href="https://trogiangvlu.website">
     <script src="~/Content/assets/js/vendors/jquery.min.js"></script>
 
-    <title>@ViewBag.Title</title>
+    <title>Teacher | @ViewBag.Title</title>
 </head>
 
 <body>
@@ -64,6 +64,21 @@
                             Trang chủ
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a id="child-classsection-index" class="nav-link child-nav-link " href="@Url.Action("index", "ClassSection")">
+                            <!-- https://feathericons.dev/?search=server&iconset=feather -->
+                            <span>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" class="main-grid-item-icon" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                                    <rect height="8" rx="2" ry="2" width="20" x="2" y="2" />
+                                    <rect height="8" rx="2" ry="2" width="20" x="2" y="14" />
+                                    <line x1="6" x2="6.01" y1="6" y2="6" />
+                                    <line x1="6" x2="6.01" y1="18" y2="18" />
+                                </svg>
+                            </span>
+                            <span class="ms-2">Lớp học phần</span>
+                        </a>
+                    </li>
+
                 </ul>
 
             </div>
