Add view apply teaching assistant

--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models;
 @{
-    ViewBag.Title = "Class Section";
+    ViewBag.Title = "Lớp học phần";
     Layout = Session["layout"].ToString();
 
     CongTacTroGiangKhoaCNTTEntities model = new CongTacTroGiangKhoaCNTTEntities();
@@ -38,8 +38,7 @@
 
 
 }
-
-<script src="~/ActiveItemMenu/Teacher/index.js"></script>
+<script src="~/ActiveItemMenu/ClassSection/index.js"></script>
 <section class="container-fluid p-4">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
