--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Student Affairs | Trang Chủ";
+    ViewBag.Title = "Trang Chủ";
     Layout = Session["layout"].ToString();
 }
 
-<script src="~/ActiveItemMenu/admin/admindashboard/index.js"></script>
+<script src="~/ActiveItemMenu/Dashboard/index.js"></script>
 <section class="container-fluid p-4 ">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
@@ -602,5 +602,3 @@
 
     </div>
 </section>
-
-<script src="~/ActiveItemMenu/studentaffairs/studentaffairsdashboard/index.js"></script>
