--- a/Views/Shared/_StudentLayout.cshtml
+++ b/Views/Shared/_StudentLayout.cshtml
@@ -66,27 +66,27 @@
                     </li>
 
                     <li class="nav-item">
-                        <a id="parent-studentaffairs-studentaffairstimetable" class="nav-link  " href="#"
-                           data-bs-toggle="collapse" data-bs-target="#nav-studentaffairs-studentaffairstimetable" aria-expanded="false"
-                           aria-controls="nav-studentaffairs-studentaffairstimetable">
-                            <i class="nav-icon fe fe-calendar me-2"></i> Trợ giảng
+                        <a id="parent-trogiang" class="nav-link  " href="#"
+                           data-bs-toggle="collapse" data-bs-target="#nav-trogiang" aria-expanded="false"
+                           aria-controls="nav-trogiang">
+                            <i class="nav-icon fe fe-briefcase me-2"></i> Trợ giảng
                         </a>
-                        <div id="nav-studentaffairs-studentaffairstimetable" class="collapse "
+                        <div id="nav-trogiang" class="collapse "
                              data-bs-parent="#sideNavbar">
                             <ul class="nav flex-column">
                                 <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairstimetable-index" class="child-nav-link nav-link "
-                                       href="@Url.Action("index", "TimeTable")">
+                                    <a id="child-trogiang-apply" class="child-nav-link nav-link "
+                                       href="@Url.Action("Apply", "TeachingAssistant")">
                                         Đăng ký
                                     </a>
                                 </li>
-                                <!-- Nav item -->
                                 <li class="nav-item ">
-                                    <a id="child-studentaffairs-studentaffairstimetable-import" class="child-nav-link nav-link "
-                                       href="@Url.Action("import", "TimeTable")">
+                                    <a id="child-trogiang-tasklist" class="child-nav-link nav-link "
+                                       href="@Url.Action("TaskList", "TeachingAssistant")">
                                         Công việc
                                     </a>
                                 </li>
+
                             </ul>
                         </div>
                     </li>
