--- a/Views/TermAndMajor/Major.cshtml
+++ b/Views/TermAndMajor/Major.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<QuanLyCongTacTroGiangKhoaCNTT.Models.Nganh>
 @{
-    ViewBag.Title = "Studentaffairs | Major";
+    ViewBag.Title = "Major";
     Layout = Session["layout"].ToString();
 }
-
+<script src="~/ActiveItemMenu/SemesterAndMajor/nganh.js"></script>
 <section class="container-fluid p-4">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
@@ -157,7 +157,6 @@
         </div>
     </div>
 </section>
-<script src="~/ActiveItemMenu/studentaffairs/studentaffairssemesterandmajor/nganh.js"></script>
-<script src="~/Validation/studentaffairs/major/add.js"></script>
-<script src="~/Validation/studentaffairs/major/edit.js"></script>
-<script src="~/Validation/studentaffairs/major/delete.js"></script>
+<script src="~/Validation/department/major/add.js"></script>
+<script src="~/Validation/department/major/edit.js"></script>
+<script src="~/Validation/department/major/delete.js"></script>
