Add function and view task list of TA

--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -91,7 +91,7 @@
                         </div>
                     </li>
 
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a id="child-task-index" class="nav-link child-nav-link " href="@Url.Action("index", "TaskList")">
                             <span>
                                 <svg xmlns="http://www.w3.org/2000/svg"
@@ -111,7 +111,7 @@
                             </span>
                             <span class="ms-2">Nhiệm vụ</span>
                         </a>
-                    </li>
+                    </li>*@
 
                     <li class="nav-item">
                         <a id="parent-studentaffairs-studentaffairstimetable" class="nav-link  " href="#"
