--- a/Views/TeachingAssistant/TaskList.cshtml
+++ b/Views/TeachingAssistant/TaskList.cshtml
@@ -1,1 +1,82 @@
-﻿
+﻿@{ 
+    ViewBag.Title = "Công việc";
+    Layout = Session["layout"].ToString();
+}
+
+<script src="~/ActiveItemMenu/TeachingAssistant/tasklist.js"></script>
+<section class="container-fluid p-4">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-12">
+            <div class="border-bottom pb-3 mb-3 d-flex justify-content-between align-items-center">
+                <div class="mb-3 mb-lg-0">
+                    <h1 class="h2 fw-bold">Quản Lý Công Việc</h1>
+                    <!-- Breadcrumb -->
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item">
+                                <a href="@Url.Action("index", "dashboard")">Dashboard</a>
+                            </li>
+                            <li class="breadcrumb-item" aria-current="page">
+                                Trợ giảng
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">
+                                Công việc
+                            </li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-12">
+            <!-- Card -->
+            <div class="card" id="pageload">
+                <h3 class="text-center mt-4 mb-3"><span class="spinner-border spinner-border-sm me-2" style="width: 18px; height: 18px" role="status" aria-hidden="true"></span>Đang tải...</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="modal fade" id="chitietmodal" tabindex="-1" role="dialog" aria-labelledby="chitietmodal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="chitietmodalTitle">Chi tiết công việc #527</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label class="form-label" for="hoten">Họ & Tên <span class="text-danger">*</span></label>
+                            <input value="" type="text" id="hoten" class="form-control" placeholder="Nhập Họ & Tên">
+                            <span class="text-danger" id="valid-hoten"></span>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label class="form-label" for="gioitinh">
+                                Giới tính <span class="text-danger">*</span>
+                            </label>
+                            <select class="form-select" id="gioitinh">
+                                <option selected value="">---- Chọn giới tính ----</option>
+                                <option value="Nam">Nam</option>
+                                <option value="Nữ">Nữ</option>
+                            </select>
+                            <span class="text-danger" id="valid-gioitinh"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="btnClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                <button id="btnSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="~/Validation/teachingassistant/load.js"></script>
