--- a/Views/Users/_Index.cshtml
+++ b/Views/Users/_Index.cshtml
@@ -123,8 +123,8 @@
             <div class="card-header border-bottom-0 pb-0">
                 <div class="row">
                     <div class="mb-3 col-md-4 col-12">
-                        <label class="form-label">Lọc chức danh</label>
-                        <select id="chucdanh" class="form-select" data-width="100%">
+                        <label class="form-label" for="filterchucdanh">Lọc chức danh</label>
+                        <select id="filterchucdanh" class="form-select" data-width="100%">
                             <option value="0">Chọn chức danh để lọc</option>
                             @foreach (var item in lstRole)
                             {
