--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -22,7 +22,6 @@
 
     <!-- CSS -->
     <!-- Libs CSS -->
-
     <link href="~/Content/assets/libs/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" />
     <link href="~/Content/assets/fonts/feather/feather.css" rel="stylesheet" />
     <link href="~/Content/assets/libs/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
@@ -92,26 +91,26 @@
                     </li>
 
                     @*<li class="nav-item">
-                        <a id="child-task-index" class="nav-link child-nav-link " href="@Url.Action("index", "TaskList")">
-                            <span>
-                                <svg xmlns="http://www.w3.org/2000/svg"
-                                     width="18"
-                                     height="18"
-                                     viewBox="0 0 24 24"
-                                     fill="none"
-                                     stroke="currentColor"
-                                     stroke-width="2"
-                                     stroke-linecap="round"
-                                     stroke-linejoin="round"
-                                     class="feather feather-trello">
-                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                                    <rect x="7" y="7" width="3" height="9"></rect>
-                                    <rect x="14" y="7" width="3" height="5"></rect>
-                                </svg>
-                            </span>
-                            <span class="ms-2">Nhiệm vụ</span>
-                        </a>
-                    </li>*@
+                            <a id="child-task-index" class="nav-link child-nav-link " href="@Url.Action("index", "TaskList")">
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                         width="18"
+                                         height="18"
+                                         viewBox="0 0 24 24"
+                                         fill="none"
+                                         stroke="currentColor"
+                                         stroke-width="2"
+                                         stroke-linecap="round"
+                                         stroke-linejoin="round"
+                                         class="feather feather-trello">
+                                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                        <rect x="7" y="7" width="3" height="9"></rect>
+                                        <rect x="14" y="7" width="3" height="5"></rect>
+                                    </svg>
+                                </span>
+                                <span class="ms-2">Nhiệm vụ</span>
+                            </a>
+                        </li>*@
 
                     <li class="nav-item">
                         <a id="parent-studentaffairs-studentaffairstimetable" class="nav-link  " href="#"
@@ -264,13 +263,12 @@
     <script src="~/Content/assets/libs/datatables.net-buttons/js/buttons.flash.min.js"></script>
     <script src="~/Content/assets/libs/datatables.net-buttons/js/buttons.print.min.js"></script>
     <script src="~/Content/assets/libs/pdfmake/build/pdfmake.min.js"></script>
+    <script src="~/Content/assets/libs/flatpickr/dist/flatpickr.min.js"></script>
+    <script src="~/Content/assets/libs/flatpickr/dist/flatpickr-vn.js"></script>
+    <script src="~/Content/assets/js/vendors/flatpickr.js"></script>
 
     <script src="~/Content/assets/libs/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
     <script src="~/Content/assets/libs/dropzone/dist/min/dropzone.min.js"></script>
-    @*<script src="~/Content/assets/libs/flatpickr/dist/flatpickr.min.js"></script>*@
-    <script src="~/Content/assets/libs/flatpickr/dist/flatpickr.js"></script>
-    <script src="~/Content/assets/js/vendors/flatpickr.js"></script>
-
     <script src="~/Content/assets/libs/Sweetalert2/js/sweetalert2.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
 </body>
