--- a/Views/TeachingAssistant/TaskList.cshtml
+++ b/Views/TeachingAssistant/TaskList.cshtml
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-12">
                         <div class="mb-3">
-                            <label class="form-label" for="hoten">Đặt câu hỏi hoặc thêm ghi chú</label>
+                            <label class="form-label" for="hoten"></label>
                             <textarea maxlength="200" placeholder="Nhập tối đa 200 ký tự" rows="4" class="form-control text-dark">Hoàn thành trước 13/10</textarea>
                         </div>
                     </div>
