--- a/Views/TeachingAssistant/_TaskList.cshtml
+++ b/Views/TeachingAssistant/_TaskList.cshtml
@@ -22,12 +22,12 @@
                     <div class="row">
                         <div class="col-3">
                             <!-- card -->
-                            <div class="card bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
+                            <div class="card w-100 h-100 bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
                                 <!-- card body -->
                                 <!-- card body -->
-                                <div class="card-body p-3 d-flex flex-column gap-4">
+                                <div class="card-body h-100 p-3 d-flex flex-column gap-4" style="height: 100% !important">
                                     <!-- task list -->
-                                    <div class="task-list">
+                                    <div class="task-list" style="height: 100% !important">
                                         <!-- content -->
                                         <div class="d-flex justify-content-between align-items-center mb-3">
                                             <div>
@@ -36,8 +36,8 @@
                                             </div>
                                         </div>
                                         <!-- task kanban -->
-                                        <div class="task-kanban">
-                                            <div id="taskcanlam">
+                                        <div class="task-kanban" style="height: 100% !important">
+                                            <div id="taskcanlam" style="height: 100% !important">
                                                 <div class="card">
                                                     <!-- card body -->
                                                     <div class="card-body p-3 d-flex flex-column gap-4">
@@ -121,12 +121,12 @@
                         </div>
 
                         <div class="col-3">
-                            <div class="card bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
+                            <div class="card w-100 h-100 bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
                                 <!-- card body -->
                                 <!-- card body -->
-                                <div class="card-body p-3 d-flex flex-column gap-4">
+                                <div class="card-body p-3 d-flex flex-column gap-4" style="height: 100% !important">
                                     <!-- task list -->
-                                    <div class="task-list">
+                                    <div class="task-list" style="height: 100% !important">
                                         <!-- content -->
                                         <div class="d-flex justify-content-between align-items-center mb-3">
                                             <div>
@@ -135,8 +135,8 @@
                                             </div>
                                         </div>
                                         <!-- task kanban -->
-                                        <div class="task-kanban">
-                                            <div id="taskdangthuchien">
+                                        <div class="task-kanban" style="height: 100% !important">
+                                            <div id="taskdangthuchien" style="height: 100% !important">
                                                 <div class="card">
                                                     <!-- card body -->
                                                     <div class="card-body p-3 d-flex flex-column gap-4">
@@ -264,12 +264,12 @@
                         </div>
 
                         <div class="col-3">
-                            <div class="card bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
+                            <div class="card w-100 h-100 bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
                                 <!-- card body -->
                                 <!-- card body -->
-                                <div class="card-body p-3 d-flex flex-column gap-4">
+                                <div class="card-body p-3 d-flex flex-column gap-4" style="height: 100% !important">
                                     <!-- task list -->
-                                    <div class="task-list">
+                                    <div class="task-list" style="height: 100% !important">
                                         <!-- content -->
                                         <div class="d-flex justify-content-between align-items-center mb-3">
                                             <div>
@@ -278,8 +278,8 @@
                                             </div>
                                         </div>
                                         <!-- task kanban -->
-                                        <div class="task-kanban">
-                                            <div id="taskchoduyet">
+                                        <div class="task-kanban" style="height: 100% !important">
+                                            <div id="taskchoduyet" style="height: 100% !important">
                                                 <div class="card">
                                                     <!-- card body -->
                                                     <div class="card-body p-3 d-flex flex-column gap-4">
@@ -447,12 +447,12 @@
                         </div>
 
                         <div class="col-3">
-                            <div class="card bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
+                            <div class="card w-100 h-100 bg-gray-200 shadow-none rounded-3 d-inline-block align-top mb-4 task-card">
                                 <!-- card body -->
                                 <!-- card body -->
-                                <div class="card-body p-3 d-flex flex-column gap-4">
+                                <div class="card-body p-3 d-flex flex-column gap-4" style="height: 100% !important">
                                     <!-- task list -->
-                                    <div class="task-list">
+                                    <div class="task-list" style="height: 100% !important">
                                         <!-- content -->
                                         <div class="d-flex justify-content-between align-items-center mb-3">
                                             <div>
@@ -461,8 +461,8 @@
                                             </div>
                                         </div>
                                         <!-- task kanban -->
-                                        <div class="task-kanban">
-                                            <div id="taskhoanthanh">
+                                        <div class="task-kanban" style="height: 100% !important">
+                                            <div id="taskhoanthanh" style="height: 100% !important">
                                                 <div class="card">
                                                     <!-- card body -->
                                                     <div class="card-body p-3 d-flex flex-column gap-4">
