Update view task detail

--- a/Views/TeachingAssistant/TaskList.cshtml
+++ b/Views/TeachingAssistant/TaskList.cshtml
@@ -114,8 +114,8 @@
                     </div>
                     <div class="col-12">
                         <div class="mb-3">
-                            <label class="form-label" for="hoten"></label>
-                            <textarea maxlength="200" placeholder="Nhập tối đa 200 ký tự" rows="4" class="form-control text-dark">Hoàn thành trước 13/10</textarea>
+                            <label class="form-label" for="hoten">Đặt câu hỏi hoặc thêm ghi chú công việc</label>
+                            <textarea maxlength="300" placeholder="Nhập tối đa 300 ký tự" rows="4" class="form-control text-dark"></textarea>
                         </div>
                     </div>
                 </div>
